Fixed off-by-one error in the computation of the relations. The relations no longer omit x_i^2

--- a/code/presentation_of_burnside.ipynb
+++ b/code/presentation_of_burnside.ipynb
@@ -2,21 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "227d084d-70d2-4ae9-9748-d5c378fffe2b",
    "metadata": {
     "vscode": {
      "languageId": "sage"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: SAGE_MACAULAY2_COMMAND=/opt/homebrew/bin/M2\n"
+     ]
+    }
+   ],
    "source": [
     "%env SAGE_MACAULAY2_COMMAND /opt/homebrew/bin/M2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "17692496-d2e7-4dcd-94d9-bdecaa5c3d91",
    "metadata": {
     "vscode": {
@@ -25,6 +33,8 @@
    },
    "outputs": [],
    "source": [
+    "# Given a group G as GAP input\n",
+    "# Output the Burnside ring A(G) as a SAGE object \n",
     "def burnside_ring(G):\n",
     "    matG = Matrix(ZZ, G.TableOfMarks().MatTom())\n",
     "    nG = matG.dimensions()[0]\n",
@@ -33,7 +43,7 @@
     "    index_of_trivial = nG-1 # GAP always put the trivial orbit at the end of the list\n",
     "    relations = [baseGens[index_of_trivial]-1]\n",
     "    for i in range(nG):\n",
-    "        for j in range(i+1,nG):\n",
+    "        for j in range(i,nG):\n",
     "            relations.append(baseGens[i]*baseGens[j] - sum(coeff * baseGens[k] for k,coeff in enumerate(matG.solve_left(vector(ZZ, [matG[i][k] * matG[j][k] for k in range(nG)])))))\n",
     "    return baseRing.quotient(relations)\n",
     "\n",
@@ -51,11 +61,47 @@
      "languageId": "sage"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                   ZZ[x1, x2]\n",
+      "-------------------------------------------------------------------------------\n",
+      "   2  2             2                  2             2                 2\n",
+      "(x1 x2  - 6x1*x2, x1 x2 - 3x1*x2, x1*x2  - 2x1*x2, x1  - x1*x2 - x1, x2  - 2x2)\n"
+     ]
+    }
+   ],
    "source": [
-    "G = gap(\"PSL(2,7)\")\n",
+    "G = gap(\"CyclicGroup(3)\")\n",
     "A_G = burnside_ring(G)\n",
     "print_minimal_presentation(A_G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "15be3b56",
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(x0bar, x1bar, x2bar, x3bar, x4bar, 1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_G.gens()"
    ]
   }
  ],
