--- a/code/presentation_of_burnside.ipynb
+++ b/code/presentation_of_burnside.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "17692496-d2e7-4dcd-94d9-bdecaa5c3d91",
    "metadata": {
     "vscode": {
@@ -34,7 +34,10 @@
    "outputs": [],
    "source": [
     "# Given a group G as GAP input\n",
-    "# Output the Burnside ring A(G) as a SAGE object \n",
+    "# Returns a pair (A(G), genDisc) where \n",
+    "#       - A(G) is the Burnside Ring of G (as a SAGE object)\n",
+    "#       - genDisc is a dictionary of structure descriptions of the generators\n",
+    "#       - note that this structure description does not distinguish between distinct but abstractly isomorphic subgroups\n",
     "def burnside_ring(G):\n",
     "    matG = Matrix(ZZ, G.TableOfMarks().MatTom())\n",
     "    nG = matG.dimensions()[0]\n",
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "5cd75b2d-6533-411e-82a3-564b362c256d",
    "metadata": {
     "scrolled": true,
@@ -66,10 +69,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                   ZZ[x1, x2]\n",
-      "-------------------------------------------------------------------------------\n",
-      "   2  2             2                  2             2                 2\n",
-      "(x1 x2  - 6x1*x2, x1 x2 - 3x1*x2, x1*x2  - 2x1*x2, x1  - x1*x2 - x1, x2  - 2x2)\n"
+      "  ZZ[x0]\n",
+      "---------\n",
+      "  2\n",
+      "x0  - 3x0\n"
      ]
     }
    ],
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "15be3b56",
    "metadata": {
     "vscode": {
@@ -92,16 +95,16 @@
     {
      "data": {
       "text/plain": [
-       "(x0bar, x1bar, x2bar, x3bar, x4bar, 1)"
+       "Ideal (x1 - 1, x0^2 - 3*x0, x0*x1 - x0, x1^2 - x1) of Multivariate Polynomial Ring in x0, x1 over Integer Ring"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A_G.gens()"
+    "A_G.defining_ideal()"
    ]
   }
  ],
