--- a/code/presentation_of_burnside.ipynb
+++ b/code/presentation_of_burnside.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "17692496-d2e7-4dcd-94d9-bdecaa5c3d91",
    "metadata": {
     "vscode": {
@@ -39,8 +39,10 @@
     "#       - genDisc is a dictionary of structure descriptions of the generators\n",
     "#       - note that this structure description does not distinguish between distinct but abstractly isomorphic subgroups\n",
     "def burnside_ring(G):\n",
-    "    matG = Matrix(ZZ, G.TableOfMarks().MatTom())\n",
+    "    tomG = G.TableOfMarks()\n",
+    "    matG = Matrix(ZZ, tomG.MatTom())\n",
     "    nG = matG.dimensions()[0]\n",
+    "    repsG = [tomG.RepresentativeTom(n+1).StructureDescription() for n in range(nG)]\n",
     "    baseRing = PolynomialRing(ZZ,'x',nG)\n",
     "    baseGens = baseRing.gens()\n",
     "    index_of_trivial = nG-1 # GAP always put the trivial orbit at the end of the list\n",
@@ -48,7 +50,9 @@
     "    for i in range(nG):\n",
     "        for j in range(i,nG):\n",
     "            relations.append(baseGens[i]*baseGens[j] - sum(coeff * baseGens[k] for k,coeff in enumerate(matG.solve_left(vector(ZZ, [matG[i][k] * matG[j][k] for k in range(nG)])))))\n",
-    "    return baseRing.quotient(relations)\n",
+    "    burnsideRing = baseRing.quotient(relations)\n",
+    "    generatorDescriptions = { baseGens[i] : str(repsG[index_of_trivial]) + \"/\" + str(repsG[i]) for i in range(nG) }\n",
+    "    return (burnsideRing,generatorDescriptions)\n",
     "\n",
     "def print_minimal_presentation(ring):\n",
     "    print(macaulay2(ring).minimalPresentation())"
@@ -56,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "5cd75b2d-6533-411e-82a3-564b362c256d",
    "metadata": {
     "scrolled": true,
@@ -69,22 +73,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  ZZ[x0]\n",
-      "---------\n",
-      "  2\n",
-      "x0  - 3x0\n"
+      "                                                                                          ZZ[x0, x2, x3, x4]\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "   2                                                                 2  2                                2                  2             2                                        2          2\n",
+      "(x0  - 8x0, x0*x3*x4 - 4x0, x0*x2 - 2x0, x0*x3 - 2x0, x0*x4 - 2x0, x3 x4  - 4x3*x4, x2*x3*x4 - 2x3*x4, x3 x4 - 2x3*x4, x3*x4  - 2x3*x4, x2  - 2x2, x2*x3 - x3*x4, x2*x4 - x3*x4, x3  - 2x3, x4  - 2x4)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{x0: 'Q8/1', x1: 'Q8/C2', x2: 'Q8/C4', x3: 'Q8/C4', x4: 'Q8/C4', x5: 'Q8/Q8'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "G = gap(\"CyclicGroup(3)\")\n",
-    "A_G = burnside_ring(G)\n",
-    "print_minimal_presentation(A_G)"
+    "G = gap(\"QuaternionGroup(8)\")\n",
+    "(A_G, gens) = burnside_ring(G)\n",
+    "print_minimal_presentation(A_G)\n",
+    "gens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "id": "15be3b56",
    "metadata": {
     "vscode": {
@@ -95,10 +110,10 @@
     {
      "data": {
       "text/plain": [
-       "Ideal (x1 - 1, x0^2 - 3*x0, x0*x1 - x0, x1^2 - x1) of Multivariate Polynomial Ring in x0, x1 over Integer Ring"
+       "Ideal (x5 - 1, x0^2 - 8*x0, x0*x1 - 4*x0, x0*x2 - 2*x0, x0*x3 - 2*x0, x0*x4 - 2*x0, x0*x5 - x0, x1^2 - 4*x1, x1*x2 - 2*x1, x1*x3 - 2*x1, x1*x4 - 2*x1, x1*x5 - x1, x2^2 - 2*x2, x2*x3 - x1, x2*x4 - x1, x2*x5 - x2, x3^2 - 2*x3, x3*x4 - x1, x3*x5 - x3, x4^2 - 2*x4, x4*x5 - x4, x5^2 - x5) of Multivariate Polynomial Ring in x0, x1, x2, x3, x4, x5 over Integer Ring"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
