added a function that computes norms!

--- a/code/presentation_of_burnside.ipynb
+++ b/code/presentation_of_burnside.ipynb
@@ -60,47 +60,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "5cd75b2d-6533-411e-82a3-564b362c256d",
+   "execution_count": 13,
+   "id": "41229ccc",
    "metadata": {
-    "scrolled": true,
     "vscode": {
      "languageId": "sage"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                                          ZZ[x0, x2, x3, x4]\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "   2                                                                 2  2                                2                  2             2                                        2          2\n",
-      "(x0  - 8x0, x0*x3*x4 - 4x0, x0*x2 - 2x0, x0*x3 - 2x0, x0*x4 - 2x0, x3 x4  - 4x3*x4, x2*x3*x4 - 2x3*x4, x3 x4 - 2x3*x4, x3*x4  - 2x3*x4, x2  - 2x2, x2*x3 - x3*x4, x2*x4 - x3*x4, x3  - 2x3, x4  - 2x4)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{x0: 'Q8/1', x1: 'Q8/C2', x2: 'Q8/C4', x3: 'Q8/C4', x4: 'Q8/C4', x5: 'Q8/Q8'}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "G = gap(\"QuaternionGroup(8)\")\n",
-    "(A_G, gens) = burnside_ring(G)\n",
-    "print_minimal_presentation(A_G)\n",
-    "gens"
+    "# A function to compute the norm from H to G in the Burnside ring\n",
+    "#\n",
+    "# INPUT\n",
+    "# H, G are GAP groups\n",
+    "# f is a vector defining a linear combination of H-orbits\n",
+    "#   The order of orbits is the same as the rows of the table of marks of H, as given by GAP\n",
+    "#   For example, if H is the quaternion group Q_8, then the vector f = (0,1,-1,0,2,0)\n",
+    "#   represents the element Q_8/C_2 - Q_8/I + 2 Q_8/K, where I = <i> and K = <k>. \n",
+    "#   \n",
+    "#   For Q_8, the GAP table of marks presents conjugacy classes of subgroups in the order \n",
+    "#   e, C_2, I, J, K, Q_8, where I = <i>, J = <j>, and K = <k>. \n",
+    "#\n",
+    "# OUTPUT \n",
+    "# a vector n encoding a linear combination of G-orbits, with order of orbits as above\n",
+    "#\n",
+    "# EXAMPLES \n",
+    "#  tbd\n",
+    "#\n",
+    "def norm(H,G,f):\n",
+    "    # if H is not a subgroup of G, then throw an error \n",
+    "    if not gap.IsSubgroup(G,H): \n",
+    "        raise ValueError(\"You fool! H must be a subgroup of G\") # maybe the error could be nicer\n",
+    "\n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    nG = len(G.ConjugacyClassesSubgroups()) # dimension of table of marks\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix \n",
+    "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
+    "\n",
+    "    tomH = H.TableOfMarks() # create the table of marks of H\n",
+    "    nH = len(H.ConjugacyClassesSubgroups()) # dimension of table of marks\n",
+    "    matH = matrix(ZZ, tomH.MatTom()) # table of marks as a matrix\n",
+    "    repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)] # reps of conjugacy classes\n",
+    "\n",
+    "    marksf = f * matH # convert the vector f of coefficients into an element of the ghost ring\n",
+    "    nm = vector(ZZ, [1]*nG) # empty product is 1; setup for looping\n",
+    "    for i in range(nG):\n",
+    "        K = repsG[i] # we're finding the component indexed by K\n",
+    "        for(g,_) in G.DoubleCosetRepsAndSizes(K,H): # only need the reps of double cosets\n",
+    "            HcapKg = gap.Intersection(H,K.ConjugateGroup(g)) # form the intersection of H and the conjugate of K by g\n",
+    "            index = next(j for j,r in enumerate(repsH) if H.IsConjugate(r, HcapKg)) # find the index of the subgroup of H that represents H \\cap K^g\n",
+    "            nm[i] *= marksf[index] # multiply the [K] component of the norm by marksf([H \\cap K^g])\n",
+    "    return matG.solve_left(nm) # convert back into a list of coefficients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "15be3b56",
+   "execution_count": 28,
+   "id": "f5310a5a",
    "metadata": {
     "vscode": {
      "languageId": "sage"
@@ -110,16 +126,31 @@
     {
      "data": {
       "text/plain": [
-       "Ideal (x5 - 1, x0^2 - 8*x0, x0*x1 - 4*x0, x0*x2 - 2*x0, x0*x3 - 2*x0, x0*x4 - 2*x0, x0*x5 - x0, x1^2 - 4*x1, x1*x2 - 2*x1, x1*x3 - 2*x1, x1*x4 - 2*x1, x1*x5 - x1, x2^2 - 2*x2, x2*x3 - x1, x2*x4 - x1, x2*x5 - x2, x3^2 - 2*x3, x3*x4 - x1, x3*x5 - x3, x4^2 - 2*x4, x4*x5 - x4, x5^2 - x5) of Multivariate Polynomial Ring in x0, x1, x2, x3, x4, x5 over Integer Ring"
+       "(4341, 0, 264, 11, 14, 0, 0, 2, 0, 0, 6, 0, 3, 0, 0, 0, 0, 0, 0)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A_G.defining_ideal()"
+    "S5 = gap(\"SymmetricGroup(5)\")\n",
+    "S4 = gap(\"SymmetricGroup(4)\")\n",
+    "C2 = gap(\"SymmetricGroup(2)\")\n",
+    "e = gap(\"SymmetricGroup(1)\")\n",
+    "# norm from e to C2 of 0 is 0 and of 1 is 1\n",
+    "# in general norm from e to C2 of a positive a is (a choose 2, a)\n",
+    "assert norm(e,C2,vector([0])) == vector([0,0])\n",
+    "assert norm(e,C2,vector([1])) == vector([0,1])\n",
+    "assert norm(e,C2,vector([4])) == vector([6,4])\n",
+    "\n",
+    "# norm from e to S5 of 0 is 0 and of 1 is 1\n",
+    "# these are slow, comment out if you don't want to wait 4s\n",
+    "assert norm(e,S5,vector([0])) == vector(ZZ,[0] * 19)\n",
+    "assert norm(e,S5,vector([1])) == vector(ZZ, 19, {18:1})\n",
+    "\n",
+    "norm(S4, S5, vector(ZZ, 11, {3:1,4:1}))"
    ]
   }
  ],
