Added transfers and restrictions

--- a/code/norms.ipynb
+++ b/code/norms.ipynb
@@ -2,14 +2,268 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e654a4ee",
+   "metadata": {},
+   "source": [
+    "RESTRICTIONS\n",
+    "===\n",
+    "Restrictions $\\text{res}^G_H \\colon A(G) \\to A(H)$ in the Burnside Tambara functor are given by \n",
+    "$$\n",
+    "    \\text{res}^G_H([X]) = [i_H^*(X)],\n",
+    "$$\n",
+    "where $i_H^* \\colon \\text{Set}^G \\to \\text{Set}^H$ is the forgetful functor. This is simple to describe in the Ghost ring. For an arbitrary class function $f \\colon \\text{Sub}(G)/G \\to \\mathbb{Z}$, \n",
+    "$$\n",
+    "    \\text{res}^G_H(f)([K]) = f([K]).\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6030f434",
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# A function to compute there striction from G to H in the ghost ring\n",
+    "#\n",
+    "# INPUT \n",
+    "# H,G are GAP groups such that H is a subgroup of G\n",
+    "#\n",
+    "# OUTPUT\n",
+    "# A matrix M such that right-multiplication by M implements the restriction from G to H\n",
+    "# in the ghost ring. \n",
+    "#\n",
+    "# DAVID M: I made the order of the inputs opposite the transfer and norm here. Do we want that?\n",
+    "def restriction_marks(G,H):\n",
+    "    # if H is not a subgroup of G, then throw an error \n",
+    "    if not gap.IsSubgroup(G,H): \n",
+    "        raise ValueError(\"You fool! H must be a subgroup of G\") # maybe the error could be nicer\n",
+    "\n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix \n",
+    "    nG = matG.dimensions()[0] # dimensions of table of marks\n",
+    "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
+    "\n",
+    "    tomH = H.TableOfMarks() # create the table of marks of H\n",
+    "    matH = matrix(ZZ, tomH.MatTom()) # table of marks as a matrix\n",
+    "    nH = matH.dimensions()[0]\n",
+    "    repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)] # reps of conjugacy classes\n",
+    "\n",
+    "    return matrix(ZZ,nG,nH,lambda i,j : G.IsConjugate(repsG[i],repsH[j]).sage())\n",
+    "\n",
+    "\n",
+    "# A function to compute there striction from G to H in the ghost ring\n",
+    "#\n",
+    "# INPUT \n",
+    "# H,G are GAP groups such that H is a subgroup of G\n",
+    "#\n",
+    "# OUTPUT\n",
+    "# A matrix M that represents the restriction from A(G) to A(H).\n",
+    "# Right-multiplication by this matrix M of a row vector in A(G) represents restriction to A(H).\n",
+    "# These Burnside rings are given the additive bases of orbits (as row vectors), \n",
+    "# presented in the same order they appear in the rows of the GAP table of marks.\n",
+    "#\n",
+    "# DAVID M: I made the order of the inputs opposite the transfer and norm here. Do we want that?    \n",
+    "def restriction(G,H):\n",
+    "    # if H is not a subgroup of G, then throw an error \n",
+    "    if not gap.IsSubgroup(G,H): \n",
+    "        raise ValueError(\"You fool! H must be a subgroup of G\") # maybe the error could be nicer\n",
+    "\n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix \n",
+    "    \n",
+    "    tomH = H.TableOfMarks() # create the table of marks of H\n",
+    "    matH = matrix(ZZ, tomH.MatTom()) # table of marks as a matrix\n",
+    "\n",
+    "    return matG*restriction_marks(G,H)*matH^(-1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "ebbad1a8",
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2 0 0]\n",
+       "[0 2 0]\n",
+       "[0 0 2]\n",
+       "[0 1 0]\n",
+       "[0 1 0]\n",
+       "[0 0 1]"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q = gap(\"QuaternionGroup(8)\")\n",
+    "subgroupsQ = [H.Representative() for H in Q.ConjugacyClassesSubgroups()]\n",
+    "e = subgroupsQ[0]\n",
+    "C2 = subgroupsQ[1]\n",
+    "I = subgroupsQ[2]\n",
+    "J = subgroupsQ[3]\n",
+    "K = subgroupsQ[4]\n",
+    "\n",
+    "restriction(Q,I)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a0a65bf",
+   "metadata": {},
+   "source": [
+    "TRANSFERS\n",
+    "===\n",
+    "Transfers $\\text{tr}_H^G \\colon A(H) \\to A(G)$ in the Burnside Tambara functor are given by \n",
+    "$$ \n",
+    "    \\text{tr}_H^G([X]) = \\left[X \\times_H G\\right].\n",
+    "$$\n",
+    "Transfers also have a nice formula in the ghost ring. For an arbitrary class function $f \\colon \\text{Sub(G)}/G \\to \\mathbb{Z}$, \n",
+    "$$\n",
+    "    \\text{tr}_H^G(f)([K]) = \\sum_{\\substack{gH \\in G/H \\\\ K^g \\subseteq H}} f([K^g]).\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd9a1dc",
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# A function to compute the transfer from H to G in the Burnside ring\n",
+    "#\n",
+    "# INPUT\n",
+    "# H,G are GAP groups such that H is a subgroup of G\n",
+    "#\n",
+    "# OUTPUT\n",
+    "# A matrix M that represents the transfer from A(H) to A(G).\n",
+    "# Right-multiplication by this matrix M of a row vector in A(H) represents transfer to A(G).\n",
+    "# These Burnside rings are given the additive bases of orbits (as row vectors), \n",
+    "# presented in the same order they appear in the rows of the GAP table of marks.\n",
+    "#\n",
+    "def transfer(H,G):\n",
+    "    # if H is not a subgroup of G, then throw an error \n",
+    "    if not gap.IsSubgroup(G,H): \n",
+    "        raise ValueError(\"You fool! H must be a subgroup of G\") # maybe the error could be nicer\n",
+    "    \n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix \n",
+    "    nG = matG.dimensions()[0] # dimensions of table of marks\n",
+    "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
+    "\n",
+    "    tomH = H.TableOfMarks() # create the table of marks of H\n",
+    "    matH = matrix(ZZ, tomH.MatTom()) # table of marks as a matrix\n",
+    "    nH = matH.dimensions()[0]\n",
+    "    repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)] # reps of conjugacy classes\n",
+    "\n",
+    "    return matrix(ZZ,nH,nG,lambda i,j: G.IsConjugate(repsH[i],repsG[j]).sage()) \n",
+    "        # create a matrix where the i,j entry is 1 if G \\times_H H/K_i = G/L_j\n",
+    "        # G.IsConjugate(K1,K2) returns a boolean GAP object; .sage() converts it to normal True/False\n",
+    "        # then python interprets True/False as 0 or 1 in a matrix.\n",
+    "\n",
+    "\n",
+    "# A function that implements the transfer on the ghost ring (as above)\n",
+    "#   This is strictly speaking not necessary, because you could just get \n",
+    "#   this matrix by basis-changing the matrix of transfer(H,G) using the tables of marks.\n",
+    "#   In fact, it's almost certainly more efficient to get it that way\n",
+    "#\n",
+    "# INPUT \n",
+    "# H,G are GAP groups such that H is a subgroup of G\n",
+    "#\n",
+    "# OUTPUT\n",
+    "# A matrix M such that right-multiplication by M implements the transfer from H to G\n",
+    "# in the ghost ring. \n",
+    "#\n",
+    "def transfer_marks(H,G):\n",
+    "    # if H is not a subgroup of G, then throw an error \n",
+    "    if not gap.IsSubgroup(G,H): \n",
+    "        raise ValueError(\"You fool! H must be a subgroup of G\") # maybe the error could be nicer\n",
+    "\n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix \n",
+    "    nG = matG.dimensions()[0] # dimensions of table of marks\n",
+    "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
+    "\n",
+    "    tomH = H.TableOfMarks() # create the table of marks of H\n",
+    "    matH = matrix(ZZ, tomH.MatTom()) # table of marks as a matrix\n",
+    "    nH = matH.dimensions()[0]\n",
+    "    repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)] # reps of conjugacy classes\n",
+    "\n",
+    "    cosetReps = [C.Representative() for C in G.LeftCosets(H)] # coset representatives for G/H\n",
+    "\n",
+    "    tr = matrix(ZZ,nH,nG) # make a matrix of all zeros of the appropriate dimensions\n",
+    "\n",
+    "    for i in range(nH):\n",
+    "        L = repsH[i]\n",
+    "        for j in range(nG): \n",
+    "            K = repsG[j]\n",
+    "            tr[i,j] = sum(1 for g in cosetReps if H.IsConjugate(L,K.ConjugateGroup(g)))\n",
+    "    return tr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b5af0a0",
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "S5 = gap(\"SymmetricGroup(5)\")\n",
+    "S4 = gap(\"SymmetricGroup(4)\")\n",
+    "S3 = gap(\"SymmetricGroup(3)\")\n",
+    "C2 = gap(\"SymmetricGroup(2)\")\n",
+    "e = gap(\"SymmetricGroup(1)\")\n",
+    "\n",
+    "matS3 = matrix(ZZ,S3.TableOfMarks().MatTom())\n",
+    "matC2 = matrix(ZZ,C2.TableOfMarks().MatTom())\n",
+    "assert matC2*transfer_marks(C2,S3)*matS3^(-1) == transfer(C2,S3)\n",
+    "\n",
+    "matS4 = matrix(ZZ,S4.TableOfMarks().MatTom())\n",
+    "matS3*transfer_marks(S3,S4)*matS4^(-1) == transfer(S3,S4)\n",
+    "\n",
+    "matS5 = matrix(ZZ,S5.TableOfMarks().MatTom())\n",
+    "assert matS4*transfer_marks(S4,S5)*matS5^(-1) == transfer(S4,S5) \n",
+    "\n",
+    "assert vector([1])*transfer(e,S5) == vector(ZZ,19,{0:1})\n",
+    "assert transfer(e,S3)*transfer(S3,S5) == transfer(e,S5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26c31cc1",
    "metadata": {},
    "source": [
+    "NORMS\n",
+    "===\n",
+    "\n",
     "The norm $\\text{nm}_H^G \\colon A(H) \\to A(G)$ the Burnside Tambara functor is given by \n",
     "$$\n",
     "    \\text{nm}_H^G(X) = \\text{Set}^H(G,X),\n",
     "$$\n",
-    "where the right-hand side is the $H$-equivariant functions from $G$ to $X$. This becomes a $G$-set via $$(g \\cdot f)(x) = f(xg).$$ \n",
+    "where the right-hand side is the $H$-equivariant functions from $G$ to $X$. This becomes a $G$-set via $(g \\cdot f)(x) = f(xg).$\n",
     "\n",
     "We can also encode these norms in the table of marks. For an arbitrary class function $f \\colon \\text{Sub}(G)/G \\to \\mathbb{Z}$, \n",
     "$$\n",
@@ -19,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "efe1f2b8",
    "metadata": {
     "vscode": {
@@ -52,13 +306,13 @@
     "        raise ValueError(\"You fool! H must be a subgroup of G\") # maybe the error could be nicer\n",
     "\n",
     "    tomG = G.TableOfMarks() # create the table of marks of G\n",
-    "    nG = len(G.ConjugacyClassesSubgroups()) # dimension of table of marks\n",
     "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix \n",
+    "    nG = matG.dimensions()[0] # dimension of table of marks\n",
     "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
     "\n",
     "    tomH = H.TableOfMarks() # create the table of marks of H\n",
-    "    nH = len(H.ConjugacyClassesSubgroups()) # dimension of table of marks\n",
     "    matH = matrix(ZZ, tomH.MatTom()) # table of marks as a matrix\n",
+    "    nH = matH.dimensions()[0]\n",
     "    repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)] # reps of conjugacy classes\n",
     "\n",
     "    marksf = f * matH # convert the vector f of coefficients into an element of the ghost ring\n",
@@ -74,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "6dae9ab7",
    "metadata": {
     "vscode": {
@@ -88,7 +342,7 @@
        "(4341, 0, 264, 11, 14, 0, 0, 2, 0, 0, 6, 0, 3, 0, 0, 0, 0, 0, 0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
