Added a function norm_marks for the norm in the ghost ring

--- a/code/norms.ipynb
+++ b/code/norms.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "efe1f2b8",
    "metadata": {
     "vscode": {
@@ -295,7 +295,8 @@
     "#   e, C_2, I, J, K, Q_8, where I = <i>, J = <j>, and K = <k>. \n",
     "#\n",
     "# OUTPUT \n",
-    "# a vector n encoding a linear combination of G-orbits, with order of orbits as above\n",
+    "# a vector nm encoding a the norm from H to G of f as a linear combination of G-orbits, \n",
+    "# with order of orbits as above\n",
     "#\n",
     "# EXAMPLES \n",
     "#  tbd\n",
@@ -323,7 +324,42 @@
     "            HcapKg = gap.Intersection(H,K.ConjugateGroup(g)) # form the intersection of H and the conjugate of K by g\n",
     "            index = next(j for j,r in enumerate(repsH) if H.IsConjugate(r, HcapKg)) # find the index of the subgroup of H that represents H \\cap K^g\n",
     "            nm[i] *= marksf[index] # multiply the [K] component of the norm by marksf([H \\cap K^g])\n",
-    "    return matG.solve_left(nm) # convert back into a list of coefficients"
+    "    return matG.solve_left(nm) # convert back into a list of coefficients\n",
+    "\n",
+    "\n",
+    "\n",
+    "# A function to compute the norm from H to G in the ghost ring\n",
+    "#\n",
+    "# INPUT\n",
+    "# H, G are GAP groups\n",
+    "# f is a row vector in the Ghost ring of H\n",
+    "#\n",
+    "# OUTPUT \n",
+    "# the norm from H to G of f in the Ghost ring of G\n",
+    "#\n",
+    "def norm_marks(H,G,f):\n",
+    "    # if H is not a subgroup of G, then throw an error \n",
+    "    if not gap.IsSubgroup(G,H): \n",
+    "        raise ValueError(\"You fool! H must be a subgroup of G\") # maybe the error could be nicer\n",
+    "\n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix \n",
+    "    nG = matG.dimensions()[0] # dimension of table of marks\n",
+    "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
+    "\n",
+    "    tomH = H.TableOfMarks() # create the table of marks of H\n",
+    "    matH = matrix(ZZ, tomH.MatTom()) # table of marks as a matrix\n",
+    "    nH = matH.dimensions()[0]\n",
+    "    repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)] # reps of conjugacy classes\n",
+    "\n",
+    "    nm = vector(ZZ, [1]*nG) # empty product is 1; setup for looping\n",
+    "    for i in range(nG):\n",
+    "        K = repsG[i] # we're finding the component indexed by K\n",
+    "        for(g,_) in G.DoubleCosetRepsAndSizes(K,H): # only need the reps of double cosets\n",
+    "            HcapKg = gap.Intersection(H,K.ConjugateGroup(g)) # form the intersection of H and the conjugate of K by g\n",
+    "            index = next(j for j,r in enumerate(repsH) if H.IsConjugate(r, HcapKg)) # find the index of the subgroup of H that represents H \\cap K^g\n",
+    "            nm[i] *= f[index] # multiply the [K] component of the norm by marksf([H \\cap K^g])\n",
+    "    return nm # convert back into a list of coefficients"
    ]
   },
   {
