--- a/code/symbolic_norms.ipynb
+++ b/code/symbolic_norms.ipynb
@@ -64,8 +64,8 @@
     "    print(\"\\n\\nhas coefficients:\\n\")\n",
     "        \n",
     "    for i in range(nG):\n",
-    "        print(\"coefficient of \" + str(gap.StructureDescription(G)) + \"/\" + str(gap.StructureDescription(repsG[i])) + \":\",end='')\n",
-    "        print(\"\\t\",factor(nm[i]))\n",
+    "        print(\"\\tcoefficient of \" + str(gap.StructureDescription(G)) + \"/\" + str(gap.StructureDescription(repsG[i])) + \":\",end='')\n",
+    "        print(\"\\t\",factor(nm[i])) # dunno if factor is better than not\n",
     "        # uncomment this line if you want latex output\n",
     "        # long term we should probably add a ton of optional argumnets to this\n",
     "        # show(nm[i]) "
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "id": "465cd584",
    "metadata": {
     "scrolled": false,
@@ -94,12 +94,12 @@
       "\n",
       "has coefficients:\n",
       "\n",
-      "coefficient of Q8/1:\t a0 * (a0 + a1) * (2*a0^2 + 2*a0*a1 + a1^2)\n",
-      "coefficient of Q8/C2:\t (1/4) * a1 * (a1 + 2) * (a1 - 1)^2\n",
-      "coefficient of Q8/C4:\t (1/2) * (a1 - 1) * a1\n",
-      "coefficient of Q8/C4:\t (1/2) * (a1 - 1) * a1\n",
-      "coefficient of Q8/C4:\t (1/2) * (a1 - 1) * a1\n",
-      "coefficient of Q8/Q8:\t a1\n"
+      "\tcoefficient of Q8/1:\t a0 * (a0 + a1) * (2*a0^2 + 2*a0*a1 + a1^2)\n",
+      "\tcoefficient of Q8/C2:\t (1/4) * a1 * (a1 + 2) * (a1 - 1)^2\n",
+      "\tcoefficient of Q8/C4:\t (1/2) * (a1 - 1) * a1\n",
+      "\tcoefficient of Q8/C4:\t (1/2) * (a1 - 1) * a1\n",
+      "\tcoefficient of Q8/C4:\t (1/2) * (a1 - 1) * a1\n",
+      "\tcoefficient of Q8/Q8:\t a1\n"
      ]
     }
    ],
